--- a/docs/cover.css
+++ b/docs/cover.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   height: 100%;
@@ -24,37 +23,52 @@ body {
   padding: 0 1.5rem;
 }
 
-
 .mastfoot {
   color: rgba(255, 255, 255, .5);
 }
 
+.foot {
+  margin-top: 100px;
+  margin-bottom: 40px;
+}
+
 .ft {
-    color: rgba(255, 255, 255, .75);
+  color: rgba(255, 255, 255, .75);
 }
 
 .ft:hover {
-    color: rgba(255, 255, 255);
+  color: rgba(255, 255, 255);
 }
 
 #banner {
-    margin: 30px;
-    width: 50%;
-    margin-top: 200px;
+  margin: 30px;
+  width: 50%;
+  margin-top: 200px;
 }
 
 #github {
-    height: 20px;
-    margin-left: 5px;
-    padding-bottom: 2px;
+  height: 20px;
+  margin-left: 5px;
+  padding-bottom: 2px;
+}
+
+#discord {
+  height: 25px;
+  margin-left: 5px;
 }
 
 .button {
-    margin-right: 15px;
-    margin-left: 15px;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 
-#txt {
-    width: 500px;
-    margin: auto;
+#demo {
+  width: 100%;
+}
+
+.txt {
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  width: 80%;
 }
